--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,42 @@
-#play{
-    color: white;    
+*{
+    padding: 0;
+    margin: 0;
+}
+body {
+    background-color: #2b037a;
+    color: white;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img{
+    max-width: 100%;
+    max-height: auto;
+    flex-shrink: 1;
+}
+
+#container {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#options{
+    gap: 10px;
+}
+
+.button {
+    flex: auto;
+    border: 4px solid green;
 }
