--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,28 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: "Press Start 2P", system-ui;
+}
+
+h1.rock{
+    color: gray;
+}
+
+h1.scissors{
+    color: red;
+}
+
+h1.paper{
+    color: greenyellow;
 }
 
 #title {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    font-size: x-large;
+    margin: 60px 20px;
 }
 
 .img{
@@ -30,13 +46,33 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 20px;
 }
 
 #options{
-    gap: 10px;
+    gap: 16px;
 }
 
 .button {
-    flex: auto;
-    border: 4px solid green;
+    padding: 20px;
+    flex: 1;
+}
+
+.press-start-2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+i{
+    color: #25d366;
+}
+
+.text{
+    margin: 20px;
+}
+
+button:hover,
+i:hover{
+    cursor: pointer;
 }
